--- a/src/FemSoftwarePackage/FemSoftwarePackage/FemSoftwarePackage.csproj
+++ b/src/FemSoftwarePackage/FemSoftwarePackage/FemSoftwarePackage.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\FemSoftwarePackage.Logic\FemSoftwarePackage.Logic.csproj" />
     <ProjectReference Include="..\FemSoftwarePackage.MathematicalObjects\FemSoftwarePackage.MathematicalObjects.csproj" />
   </ItemGroup>
 
